--- a/redbusFramework/test-output/old/Default suite/classes.html
+++ b/redbusFramework/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>test.sortbyFare</td>
+<td>test.searchBus$sortbyFare</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>availableBus</td>
+<td>quitBrowser</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
