--- a/redbusFramework/test-output/index.html
+++ b/redbusFramework/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\vishal\AppData\Local\Temp\testng-eclipse--104442835\testng-customsuite.xml</span>
+                    <span>C:\Users\vishal\AppData\Local\Temp\testng-eclipse--1301803306\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,12 +104,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="test.sortbyFare" class="method navigator-link" hash-for-method="availableBus">availableBus</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="test.searchBus$sortbyFare" class="method navigator-link" hash-for-method="fromCity">fromCity</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="test.sortbyFare" class="method navigator-link" hash-for-method="fromCity">fromCity</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="test.searchBus$sortbyFare" class="method navigator-link" hash-for-method="quitBrowser">quitBrowser</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -127,16 +127,9 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">test.sortbyFare</span>
+              <span class="class-name">test.searchBus$sortbyFare</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="availableBus">
-                  </a> <!-- availableBus -->
-                  <span class="method-name">availableBus</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="fromCity">
@@ -144,12 +137,19 @@
                   <span class="method-name">fromCity</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="quitBrowser">
+                  </a> <!-- quitBrowser -->
+                  <span class="method-name">quitBrowser</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\vishal\AppData\Local\Temp\testng-eclipse--104442835\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\vishal\AppData\Local\Temp\testng-eclipse--1301803306\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -158,7 +158,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;test.sortbyFare&quot;/&gt;
+      &lt;class name=&quot;test.searchBus&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -201,17 +201,17 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'fromCity')
-data.setCell(0, 2, 'test.sortbyFare')
-data.setCell(0, 3, 54237);
+data.setCell(0, 2, 'test.searchBus$sortbyFare')
+data.setCell(0, 3, 20796);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'availableBus')
-data.setCell(1, 2, 'test.sortbyFare')
-data.setCell(1, 3, 6522);
+data.setCell(1, 1, 'quitBrowser')
+data.setCell(1, 2, 'test.searchBus$sortbyFare')
+data.setCell(1, 3, 20008);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 40 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -237,18 +237,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">test.sortbyFare</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">test.searchBus$sortbyFare</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">initialization</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">fromCity</span>
-                <span class="method-start">29509 ms</span>
+                <span class="method-start">25149 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">availableBus</span>
-                <span class="method-start">83773 ms</span>
+                <span class="method-name">quitBrowser</span>
+                <span class="method-start">45956 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
