--- a/redbusFramework/test-output/old/Default suite/methods.html
+++ b/redbusFramework/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8bd0de">  <td>23/01/22 21:23:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="sortbyFare.availableBus()[pri:2, instance:test.sortbyFare@506ae4d4]">availableBus</td> 
-  <td>main@1898325501</td>   <td></td> </tr>
-<tr bgcolor="8bd0de">  <td>23/01/22 21:22:29</td>   <td>-83764</td> <td>&nbsp;</td><td title="&gt;&gt;sortbyFare.initialization()[pri:0, instance:test.sortbyFare@506ae4d4]">&gt;&gt;initialization</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1898325501</td>   <td></td> </tr>
-<tr bgcolor="8bd0de">  <td>23/01/22 21:22:59</td>   <td>-54264</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="sortbyFare.fromCity()[pri:1, instance:test.sortbyFare@506ae4d4]">fromCity</td> 
-  <td>main@1898325501</td>   <td></td> </tr>
+<tr bgcolor="7acd7b">  <td>23/01/23 22:56:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="searchBus$sortbyFare.fromCity()[pri:1, instance:test.searchBus$sortbyFare@53aac487]">fromCity</td> 
+  <td>main@889891977</td>   <td></td> </tr>
+<tr bgcolor="7acd7b">  <td>23/01/23 22:55:36</td>   <td>-25138</td> <td>&nbsp;</td><td title="&gt;&gt;searchBus$sortbyFare.initialization()[pri:0, instance:test.searchBus$sortbyFare@53aac487]">&gt;&gt;initialization</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@889891977</td>   <td></td> </tr>
+<tr bgcolor="7acd7b">  <td>23/01/23 22:56:21</td>   <td>20806</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="searchBus$sortbyFare.quitBrowser()[pri:2, instance:test.searchBus$sortbyFare@53aac487]">quitBrowser</td> 
+  <td>main@889891977</td>   <td></td> </tr>
 </table>
