--- a/RedbusFramwork1/test-output/old/Default suite/methods-not-run.html
+++ b/RedbusFramwork1/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,5 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>test.LinkValidations.closeWindow</td></tr>
+<tr><td>test.LinkValidations.availableLinks</td></tr>
+<tr><td>test.LinkValidations.firstColumnLinksInFooter</td></tr>
 </table>
