--- a/RedbusFramwork1/test-output/old/Suite/groups.html
+++ b/RedbusFramwork1/test-output/old/Suite/groups.html
@@ -1,1 +1,4 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Regression</td><td>SearchBus.findBuses()[pri:2, instance:test.SearchBus@23c30a20]<br/>SearchBus.fromDropdown()[pri:1, instance:test.SearchBus@23c30a20]<br/>SearchBus.closeWindow()[pri:3, instance:test.SearchBus@23c30a20]<br/></td></tr>
+<tr><td>Sanity</td><td>SearchBus.findBuses()[pri:2, instance:test.SearchBus@23c30a20]<br/>SearchBus.fromDropdown()[pri:1, instance:test.SearchBus@23c30a20]<br/>SearchBus.closeWindow()[pri:3, instance:test.SearchBus@23c30a20]<br/>LinkValidations.closeWindow()[pri:4, instance:test.LinkValidations@f09733f]<br/>LinkValidations.availableLinks()[pri:1, instance:test.LinkValidations@f09733f]<br/>LinkValidations.availableFooterLinks()[pri:2, instance:test.LinkValidations@f09733f]<br/>LinkValidations.firstColumnLinksInFooter()[pri:3, instance:test.LinkValidations@f09733f]<br/></td></tr>
+</table>
