--- a/RedbusFramwork1/test-output/old/Default suite/classes.html
+++ b/RedbusFramwork1/test-output/old/Default suite/classes.html
@@ -4,26 +4,26 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>test.FilterByTest</td>
+<td>test.LinkValidations</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>filterByNonACType</td>
+<td>firstColumnLinksInFooter</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>availableLinks</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>availableFooterLinks</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>closeWindow</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>fromDropdown</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>findBuses</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
