--- a/RedbusFramwork1/test-output/old/Suite/classes.html
+++ b/RedbusFramwork1/test-output/old/Suite/classes.html
@@ -4,6 +4,40 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
+<td>test.FilterByTest</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>filterByNonACType</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>closeWindow</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>findBuses</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>fromDropdown</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
 <td>test.SortBy</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -34,27 +68,26 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
-<td>test.LinkValidations</td>
+<td>test.SearchBus</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>firstColumnLinksInFooter</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>availableLinks</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>availableFooterLinks</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
 <td>closeWindow</td>
-<td>&nbsp;</td></tr>
+<td>Sanity Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>findBuses</td>
+<td>Sanity Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>fromDropdown</td>
+<td>Sanity Regression </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -68,23 +101,31 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
-<td>test.SearchBus</td>
+<td>test.LinkValidations</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>firstColumnLinksInFooter</td>
+<td>Sanity </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>availableLinks</td>
+<td>Sanity </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>availableFooterLinks</td>
+<td>Sanity </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
 <td>closeWindow</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>fromDropdown</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>findBuses</td>
-<td>&nbsp;</td></tr>
+<td>Sanity </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
