--- a/RedbusFramwork1/test-output/old/Suite/methods-alphabetical.html
+++ b/RedbusFramwork1/test-output/old/Suite/methods-alphabetical.html
@@ -1,30 +1,40 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a970b0">  <td>23/01/22 23:56:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SortBy.FirstPage()[pri:-1, instance:test.SortBy@231f98ef]">FirstPage</td> 
+<tr bgcolor="9e94ad">  <td>23/01/23 22:38:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SortBy.FirstPage()[pri:-1, instance:test.SortBy@6c1a5b54]">FirstPage</td> 
   <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="a970b0">  <td>23/01/22 23:56:09</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SortBy.SortFare()[pri:2, instance:test.SortBy@231f98ef]">SortFare</td> 
+<tr bgcolor="9e94ad">  <td>23/01/23 22:38:53</td>   <td>53483</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SortBy.SortFare()[pri:2, instance:test.SortBy@6c1a5b54]">SortFare</td> 
   <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="d07cbb">  <td>23/01/22 23:55:42</td>   <td>-26966</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LinkValidations.availableFooterLinks()[pri:2, instance:test.LinkValidations@61001b64]">availableFooterLinks</td> 
+<tr bgcolor="6ba072">  <td>23/01/23 22:37:23</td>   <td>-36749</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LinkValidations.availableFooterLinks()[pri:2, instance:test.LinkValidations@f09733f]">availableFooterLinks</td> 
   <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="d07cbb">  <td>23/01/22 23:55:42</td>   <td>-27027</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LinkValidations.availableLinks()[pri:1, instance:test.LinkValidations@61001b64]">availableLinks</td> 
+<tr bgcolor="6ba072">  <td>23/01/23 22:37:23</td>   <td>-36775</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LinkValidations.availableLinks()[pri:1, instance:test.LinkValidations@f09733f]">availableLinks</td> 
   <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="a970b0">  <td>23/01/22 23:56:12</td>   <td>3028</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SortBy.closeWindow()[pri:3, instance:test.SortBy@231f98ef]">closeWindow</td> 
+<tr bgcolor="fcb6ab">  <td>23/01/23 22:35:50</td>   <td>-129747</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchBus.closeWindow()[pri:3, instance:test.SearchBus@23c30a20]">closeWindow</td> 
   <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="d07cbb">  <td>23/01/22 23:55:56</td>   <td>-12947</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LinkValidations.closeWindow()[pri:4, instance:test.LinkValidations@61001b64]">closeWindow</td> 
+<tr bgcolor="6ba072">  <td>23/01/23 22:37:54</td>   <td>-5221</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LinkValidations.closeWindow()[pri:4, instance:test.LinkValidations@f09733f]">closeWindow</td> 
   <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="96bacf">  <td>23/01/22 23:56:09</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchBus.closeWindow()[pri:3, instance:test.SearchBus@4659191b]">closeWindow</td> 
+<tr bgcolor="9e94ad">  <td>23/01/23 22:39:14</td>   <td>73980</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SortBy.closeWindow()[pri:3, instance:test.SortBy@6c1a5b54]">closeWindow</td> 
   <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="96bacf">  <td>23/01/22 23:56:07</td>   <td>-2083</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchBus.findBuses()[pri:2, instance:test.SearchBus@4659191b]">findBuses</td> 
+<tr bgcolor="82a7b9">  <td>23/01/23 22:40:02</td>   <td>122779</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FilterByTest.closeWindow()[pri:4, instance:test.FilterByTest@4e5ed836]">closeWindow</td> 
   <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="d07cbb">  <td>23/01/22 23:55:42</td>   <td>-26918</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LinkValidations.firstColumnLinksInFooter()[pri:3, instance:test.LinkValidations@61001b64]">firstColumnLinksInFooter</td> 
+<tr bgcolor="82a7b9">  <td>23/01/23 22:39:47</td>   <td>107586</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FilterByTest.filterByNonACType()[pri:3, instance:test.FilterByTest@4e5ed836]">filterByNonACType</td> 
   <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="96bacf">  <td>23/01/22 23:55:57</td>   <td>-11577</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchBus.fromDropdown()[pri:1, instance:test.SearchBus@4659191b]">fromDropdown</td> 
+<tr bgcolor="fcb6ab">  <td>23/01/23 22:33:45</td>   <td>-255000</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchBus.findBuses()[pri:2, instance:test.SearchBus@23c30a20]">findBuses</td> 
   <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="a970b0">  <td>23/01/22 23:55:34</td>   <td>-34819</td> <td>&nbsp;</td><td title="&gt;&gt;SortBy.setupTest()[pri:0, instance:test.SortBy@231f98ef]">&gt;&gt;setupTest</td> 
+<tr bgcolor="82a7b9">  <td>23/01/23 22:39:42</td>   <td>102509</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FilterByTest.findBuses()[pri:2, instance:test.FilterByTest@4e5ed836]">findBuses</td> 
+  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="6ba072">  <td>23/01/23 22:37:23</td>   <td>-36719</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LinkValidations.firstColumnLinksInFooter()[pri:3, instance:test.LinkValidations@f09733f]">firstColumnLinksInFooter</td> 
+  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="fcb6ab">  <td>23/01/23 22:33:35</td>   <td>-264151</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchBus.fromDropdown()[pri:1, instance:test.SearchBus@23c30a20]">fromDropdown</td> 
+  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="82a7b9">  <td>23/01/23 22:39:33</td>   <td>93799</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FilterByTest.fromDropdown()[pri:1, instance:test.FilterByTest@4e5ed836]">fromDropdown</td> 
+  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="fcb6ab">  <td>23/01/23 22:33:06</td>   <td>-293758</td> <td>&nbsp;</td><td title="&gt;&gt;SearchBus.setupTest()[pri:0, instance:test.SearchBus@23c30a20]">&gt;&gt;setupTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="d07cbb">  <td>23/01/22 23:55:25</td>   <td>-44158</td> <td>&nbsp;</td><td title="&gt;&gt;LinkValidations.setupTest()[pri:0, instance:test.LinkValidations@61001b64]">&gt;&gt;setupTest</td> 
+<tr bgcolor="6ba072">  <td>23/01/23 22:35:50</td>   <td>-129459</td> <td>&nbsp;</td><td title="&gt;&gt;LinkValidations.setupTest()[pri:0, instance:test.LinkValidations@f09733f]">&gt;&gt;setupTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="96bacf">  <td>23/01/22 23:55:30</td>   <td>-39255</td> <td>&nbsp;</td><td title="&gt;&gt;SearchBus.setupTest()[pri:0, instance:test.SearchBus@4659191b]">&gt;&gt;setupTest</td> 
+<tr bgcolor="9e94ad">  <td>23/01/23 22:37:55</td>   <td>-4905</td> <td>&nbsp;</td><td title="&gt;&gt;SortBy.setupTest()[pri:0, instance:test.SortBy@6c1a5b54]">&gt;&gt;setupTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="82a7b9">  <td>23/01/23 22:39:14</td>   <td>74290</td> <td>&nbsp;</td><td title="&gt;&gt;FilterByTest.setupTest()[pri:0, instance:test.FilterByTest@4e5ed836]">&gt;&gt;setupTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
 </table>
