--- a/RedbusFramwork1/test-output/old/Suite/methods.html
+++ b/RedbusFramwork1/test-output/old/Suite/methods.html
@@ -1,30 +1,40 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a970b0">  <td>23/01/22 23:55:34</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;SortBy.setupTest()[pri:0, instance:test.SortBy@231f98ef]">&gt;&gt;setupTest</td> 
+<tr bgcolor="fcb6ab">  <td>23/01/23 22:33:06</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;SearchBus.setupTest()[pri:0, instance:test.SearchBus@23c30a20]">&gt;&gt;setupTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="a970b0">  <td>23/01/22 23:56:12</td>   <td>37847</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SortBy.closeWindow()[pri:3, instance:test.SortBy@231f98ef]">closeWindow</td> 
+<tr bgcolor="fcb6ab">  <td>23/01/23 22:35:50</td>   <td>164011</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchBus.closeWindow()[pri:3, instance:test.SearchBus@23c30a20]">closeWindow</td> 
   <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="d07cbb">  <td>23/01/22 23:55:42</td>   <td>7901</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LinkValidations.firstColumnLinksInFooter()[pri:3, instance:test.LinkValidations@61001b64]">firstColumnLinksInFooter</td> 
+<tr bgcolor="fcb6ab">  <td>23/01/23 22:33:35</td>   <td>29607</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchBus.fromDropdown()[pri:1, instance:test.SearchBus@23c30a20]">fromDropdown</td> 
   <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="a970b0">  <td>23/01/22 23:56:09</td>   <td>34824</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SortBy.SortFare()[pri:2, instance:test.SortBy@231f98ef]">SortFare</td> 
+<tr bgcolor="fcb6ab">  <td>23/01/23 22:33:45</td>   <td>38758</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchBus.findBuses()[pri:2, instance:test.SearchBus@23c30a20]">findBuses</td> 
   <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="d07cbb">  <td>23/01/22 23:55:56</td>   <td>21872</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LinkValidations.closeWindow()[pri:4, instance:test.LinkValidations@61001b64]">closeWindow</td> 
+<tr bgcolor="6ba072">  <td>23/01/23 22:37:23</td>   <td>257039</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LinkValidations.firstColumnLinksInFooter()[pri:3, instance:test.LinkValidations@f09733f]">firstColumnLinksInFooter</td> 
   <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="d07cbb">  <td>23/01/22 23:55:25</td>   <td>-9339</td> <td>&nbsp;</td><td title="&gt;&gt;LinkValidations.setupTest()[pri:0, instance:test.LinkValidations@61001b64]">&gt;&gt;setupTest</td> 
+<tr bgcolor="6ba072">  <td>23/01/23 22:37:23</td>   <td>256983</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LinkValidations.availableLinks()[pri:1, instance:test.LinkValidations@f09733f]">availableLinks</td> 
+  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="6ba072">  <td>23/01/23 22:37:23</td>   <td>257009</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LinkValidations.availableFooterLinks()[pri:2, instance:test.LinkValidations@f09733f]">availableFooterLinks</td> 
+  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="6ba072">  <td>23/01/23 22:37:54</td>   <td>288537</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LinkValidations.closeWindow()[pri:4, instance:test.LinkValidations@f09733f]">closeWindow</td> 
+  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="6ba072">  <td>23/01/23 22:35:50</td>   <td>164299</td> <td>&nbsp;</td><td title="&gt;&gt;LinkValidations.setupTest()[pri:0, instance:test.LinkValidations@f09733f]">&gt;&gt;setupTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="d07cbb">  <td>23/01/22 23:55:42</td>   <td>7792</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LinkValidations.availableLinks()[pri:1, instance:test.LinkValidations@61001b64]">availableLinks</td> 
-  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="96bacf">  <td>23/01/22 23:56:07</td>   <td>32736</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchBus.findBuses()[pri:2, instance:test.SearchBus@4659191b]">findBuses</td> 
-  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="d07cbb">  <td>23/01/22 23:55:42</td>   <td>7853</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LinkValidations.availableFooterLinks()[pri:2, instance:test.LinkValidations@61001b64]">availableFooterLinks</td> 
-  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="a970b0">  <td>23/01/22 23:56:09</td>   <td>34819</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SortBy.FirstPage()[pri:-1, instance:test.SortBy@231f98ef]">FirstPage</td> 
-  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="96bacf">  <td>23/01/22 23:56:09</td>   <td>34816</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchBus.closeWindow()[pri:3, instance:test.SearchBus@4659191b]">closeWindow</td> 
-  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="96bacf">  <td>23/01/22 23:55:57</td>   <td>23242</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchBus.fromDropdown()[pri:1, instance:test.SearchBus@4659191b]">fromDropdown</td> 
-  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="96bacf">  <td>23/01/22 23:55:30</td>   <td>-4436</td> <td>&nbsp;</td><td title="&gt;&gt;SearchBus.setupTest()[pri:0, instance:test.SearchBus@4659191b]">&gt;&gt;setupTest</td> 
+<tr bgcolor="9e94ad">  <td>23/01/23 22:37:55</td>   <td>288853</td> <td>&nbsp;</td><td title="&gt;&gt;SortBy.setupTest()[pri:0, instance:test.SortBy@6c1a5b54]">&gt;&gt;setupTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="9e94ad">  <td>23/01/23 22:38:53</td>   <td>347241</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SortBy.SortFare()[pri:2, instance:test.SortBy@6c1a5b54]">SortFare</td> 
+  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="9e94ad">  <td>23/01/23 22:38:00</td>   <td>293758</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SortBy.FirstPage()[pri:-1, instance:test.SortBy@6c1a5b54]">FirstPage</td> 
+  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="9e94ad">  <td>23/01/23 22:39:14</td>   <td>367738</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SortBy.closeWindow()[pri:3, instance:test.SortBy@6c1a5b54]">closeWindow</td> 
+  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="82a7b9">  <td>23/01/23 22:39:33</td>   <td>387557</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FilterByTest.fromDropdown()[pri:1, instance:test.FilterByTest@4e5ed836]">fromDropdown</td> 
+  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="82a7b9">  <td>23/01/23 22:39:14</td>   <td>368048</td> <td>&nbsp;</td><td title="&gt;&gt;FilterByTest.setupTest()[pri:0, instance:test.FilterByTest@4e5ed836]">&gt;&gt;setupTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="82a7b9">  <td>23/01/23 22:40:02</td>   <td>416537</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FilterByTest.closeWindow()[pri:4, instance:test.FilterByTest@4e5ed836]">closeWindow</td> 
+  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="82a7b9">  <td>23/01/23 22:39:47</td>   <td>401344</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FilterByTest.filterByNonACType()[pri:3, instance:test.FilterByTest@4e5ed836]">filterByNonACType</td> 
+  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="82a7b9">  <td>23/01/23 22:39:42</td>   <td>396267</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FilterByTest.findBuses()[pri:2, instance:test.FilterByTest@4e5ed836]">findBuses</td> 
+  <td>main@1361960727</td>   <td></td> </tr>
 </table>
