--- a/RedbusFramwork1/test-output/old/Suite/toc.html
+++ b/RedbusFramwork1/test-output/old/Suite/toc.html
@@ -8,22 +8,46 @@
 <h3><p align="center">Results for<br/><em>Suite</em></p></h3>
 <table border='1' width='100%'>
 <tr valign='top'>
-<td>1 test</td>
-<td><a target='mainFrame' href='classes.html'>3 classes</a></td>
-<td>10 methods:<br/>
+<td>4 tests</td>
+<td><a target='mainFrame' href='classes.html'>4 classes</a></td>
+<td>14 methods:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (0)</a></td>
 </tr>
 <tr>
-<td><a target='mainFrame' href='groups.html'>0 group</a></td>
+<td><a target='mainFrame' href='groups.html'>2 groups</a></td>
 <td><a target='mainFrame' href='reporter-output.html'>reporter output</a></td>
 <td><a target='mainFrame' href='testng.xml.html'>testng.xml</a></td>
 </tr></table>
-<table width='100%' class='test-failed'>
+<table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Test (6/4/0)</td><td valign='top' align='right'>
-  <a href='Test.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>TestFilterBy (4/0/0)</td><td valign='top' align='right'>
+  <a href='TestFilterBy.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>TestLinks (3/0/0)</td><td valign='top' align='right'>
+  <a href='TestLinks.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>TestSearch (4/0/0)</td><td valign='top' align='right'>
+  <a href='TestSearch.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>TestSortBy (3/0/0)</td><td valign='top' align='right'>
+  <a href='TestSortBy.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
